# KnowFlow

./: .dockerignore  .env.example  .gitignore  ARCHIVED_EXPO_FRONTEND.md  DEPLOYMENT.md  QUICK_START.md  README.md  TODO.md  VERIFICATION.md  app.js  deploy.sh  docker-compose.yml  index.html  package-lock.json  package.json  quick-deploy.sh  styles.css  知进（know_flow）_产品_技术设计_v_0.md
backend/: .env.example  Cargo.toml  Dockerfile  README.md  knowflow.db
backend/services/api/: Cargo.toml  openapi.yaml
backend/services/api/migrations/: 0001_init.sql  0002_workout_summaries.sql  0003_notification_preferences.sql  0004_sync_tombstones.sql
backend/services/api/src/: config.rs  db.rs  error.rs  main.rs  state.rs
backend/services/api/src/domain/: card_application.rs  direction.rs  evidence.rs  memory_card.rs  mod.rs  notification.rs  skill_point.rs  workout.rs
backend/services/api/src/repositories/: card_applications.rs  directions.rs  evidence.rs  memory_cards.rs  mod.rs  notification_preferences.rs  skill_points.rs  sync.rs  workouts.rs
backend/services/api/src/routes/: card_applications.rs  directions.rs  evidence.rs  health.rs  import.rs  intelligence.rs  memory_cards.rs  mod.rs  notifications.rs  onboarding.rs  progress.rs  search.rs  settings.rs  skill_points.rs  sync.rs  today.rs  tree.rs  vault.rs
backend/services/api/src/services/: import.rs  llm.rs  mod.rs  today.rs
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/clients/: mod.rs  volcengine.rs
backend/src/models/: digest.rs
backend/src/routes/: digest.rs  mod.rs
backend/src/services/: aggregator.rs  assets.rs  digest.rs  mod.rs  summarizer.rs  tts.rs
backend/tests/: digest_flow.rs
frontend/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  README.md  app.d.ts  app.json  babel.config.js  eslint.config.cjs  index.html  index.ts  jest.e2e.config.js  jest.nativeModulesMock.js  jest.preload.ts  jest.setup.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  webpack.config.js
frontend/src/: App.css  (+3 more)
scripts/: deploy.sh  dev.sh  start-backend.sh  start-frontend.sh  test-e2e-live.sh
src/: App.tsx  main.tsx
(+160 files in other folders)
