[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "gzip"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
feed-rs = "1.3"
dotenvy = "0.15"
once_cell = "1.18"
url = "2"
serde_with = "3.4"
bytes = "1.5"
base64 = "0.21"
mime = "0.3"
mime_guess = "2.0"

[dev-dependencies]
wiremock = "0.6"
serde_json = "1"
axum-test = "15"
tempfile = "3"
